--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,6 +43,7 @@
   },
   "devDependencies": {
     "@types/react-scroll": "^1.8.9",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.2.2"
   }
 }
